lang/tests/contract/ui/fail/40-invalid-ABI-specification.rs
use liquid_lang as liquid;

#[liquid::interface(name = auto)]
mod foo {
    extern "C" {
        fn bar(&self);
    }
}

fn main() {}
